--- a/src/admin_panel/admin_panel_view.fxml
+++ b/src/admin_panel/admin_panel_view.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -12,55 +13,66 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin_panel.AdminPanelController">
-  <children>
-      <AnchorPane prefHeight="80.0" prefWidth="200.0">
-         <children>
-            <Label layoutX="384.0" layoutY="18.0" text="Administrator panel" />
-         </children>
-      </AnchorPane>
-    <SplitPane dividerPositions="0.2505567928730512, 0.7505567928730512" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
-      <items>
-        <AnchorPane>
-               <children>
-                  <Button fx:id="mUploadCatBtn" layoutX="40.0" layoutY="149.0" mnemonicParsing="false" onAction="#onClickNavigateBtn" text="Upload a category" />
-                  <Button fx:id="mManageSupBtn" layoutX="35.0" layoutY="211.0" mnemonicParsing="false" onAction="#onClickNavigateBtn" text="Manage supervisors" />
-                  <Button fx:id="mAccountBtn" layoutX="40.0" layoutY="278.0" mnemonicParsing="false" onAction="#onClickNavigateBtn" prefHeight="31.0" prefWidth="153.0" text="Account" />
-                  <Button fx:id="mSettingsBtn" layoutX="35.0" layoutY="344.0" mnemonicParsing="false" onAction="#onClickNavigateBtn" prefHeight="31.0" prefWidth="153.0" text="Settings" />
-                  <Button fx:id="mOpenTextEditorBtn" layoutX="47.0" layoutY="87.0" mnemonicParsing="false" onAction="#onClickNavigateBtn" text="Census text editor" />
-               </children>
+<VBox prefHeight="700.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="admin_panel.AdminPanelController">
+    <AnchorPane prefHeight="80.0" prefWidth="1000.0" style="-fx-background-color: #0C39FF;">
+        <Label layoutX="528.0" layoutY="30.0" prefHeight="35.0" prefWidth="236.0" text="Administrator panel"
+               AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="528.0" AnchorPane.rightAnchor="486.0"
+               AnchorPane.topAnchor="10.0">
+            <font>
+                <Font size="24.0"/>
+            </font>
+        </Label>
+    </AnchorPane>
+    <SplitPane dividerPositions="0.2505567928730512, 0.7505567928730512" focusTraversable="true"
+               VBox.vgrow="ALWAYS">
+        <AnchorPane style="-fx-background-color: #d3d3d3;" stylesheets="@../styling/fullpackstyling.css">
+            <Button fx:id="mUploadCatBtn" layoutX="84.0" layoutY="233.0" mnemonicParsing="false"
+                    onAction="#onClickNavigateBtn" text="Upload a category"/>
+            <Button fx:id="mManageSupBtn" layoutX="72.0" layoutY="313.0" mnemonicParsing="false"
+                    onAction="#onClickNavigateBtn" text="Manage supervisors"/>
+            <Button fx:id="mAccountBtn" layoutX="73.0" layoutY="391.0" mnemonicParsing="false"
+                    onAction="#onClickNavigateBtn" prefHeight="31.0" prefWidth="153.0" text="Account"/>
+            <Button fx:id="mOpenTextEditorBtn" layoutX="85.0" layoutY="141.0" mnemonicParsing="false"
+                    onAction="#onClickNavigateBtn" text="Census text editor"/>
+            <Button fx:id="mHomePanelBtn" layoutX="73.0" layoutY="467.0" mnemonicParsing="false"
+                    onAction="#onClickNavigateBtn" prefHeight="31.0" prefWidth="153.0" text="Home Panel"/>
         </AnchorPane>
-        <ScrollPane fx:id="uploadCatSP" prefHeight="-1.0" prefWidth="-1.0">
-          <content>
-            <AnchorPane id="Content" fx:id="mUploadAP" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="430.0" />
-          </content>
+        <ScrollPane fx:id="uploadCatSP">
+            <AnchorPane id="Content" fx:id="mUploadAP" prefHeight="583.0"
+                        prefWidth="621.0"/>
         </ScrollPane>
         <AnchorPane>
-          <children>
-            <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" style="&#10;" text="Details" textAlignment="CENTER" wrapText="false">
-                     <font>
-                <Font size="18.0" fx:id="x1" />
-                     </font></Label>
-          </children>
+            <TextArea fx:id="mDetailsTA" layoutX="29.0" layoutY="98.0" prefHeight="400.0" prefWidth="250.0"
+                      AnchorPane.bottomAnchor="98.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="28.0"
+                      AnchorPane.topAnchor="98.0"/>
+            <Label alignment="CENTER" layoutX="29.0" layoutY="29.0" style="&#10;" text="Details"
+                   textAlignment="CENTER" AnchorPane.bottomAnchor="540.0"
+                   AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="224.0" AnchorPane.topAnchor="29.0">
+                <font>
+                    <Font size="18.0"/>
+                </font>
+                <textFill>
+                    <Color blue="0.624" green="0.624" red="0.624"/>
+                </textFill>
+            </Label>
         </AnchorPane>
-      </items>
     </SplitPane>
     <HBox id="HBox" alignment="CENTER_LEFT" spacing="5.0" VBox.vgrow="NEVER">
-      <children>
-        <Label fx:id="mLeftStatusLbl" maxHeight="1.7976931348623157E308" maxWidth="-1.0" text="Left status" HBox.hgrow="ALWAYS">
-          <font>
-            <Font size="11.0" fx:id="x3" />
-          </font>
-          <textFill>
-            <Color blue="0.625" green="0.625" red="0.625" fx:id="x4" />
-          </textFill>
+        <padding>
+            <Insets bottom="3.0" left="3.0" right="3.0" top="3.0"/>
+        </padding>
+        <Label fx:id="mLeftStatusLbl" maxHeight="1.7976931348623157E308" text="Left status"
+               HBox.hgrow="ALWAYS">
+            <font>
+                <Font size="11.0" fx:id="x3"/>
+            </font>
+            <textFill>
+                <Color blue="0.625" green="0.625" red="0.625" fx:id="x4"/>
+            </textFill>
         </Label>
-        <Pane prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
-        <Label fx:id="mRightStatusLbl" font="$x3" maxWidth="-1.0" text="Right status" textFill="$x4" HBox.hgrow="NEVER" />
-      </children>
-      <padding>
-        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-      </padding>
+        <Pane HBox.hgrow="ALWAYS"/>
+        <Label fx:id="mRightStatusLbl" font="$x3" maxWidth="-1.0" text="Right status" textFill="$x4"
+               HBox.hgrow="NEVER"/>
     </HBox>
-  </children>
 </VBox>
