--- a/src/home_panel/home_view.fxml
+++ b/src/home_panel/home_view.fxml
@@ -1,36 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="home_panel.HomeViewController">
-   <children>
-      <ImageView fitHeight="343.0" fitWidth="1300.0" layoutX="550.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="457.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="497.0" AnchorPane.topAnchor="0.0">
-         <image>
-            <Image url="@../../../../../../../Pictures/Android.png" />
-         </image>
-      </ImageView>
-      <AnchorPane layoutX="156.0" layoutY="462.0" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: #83C2D0;" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="50.0">
-         <children>
-            <Button layoutX="55.0" layoutY="62.0" mnemonicParsing="false" onAction="#onClickAdminPanel" prefHeight="200.0" prefWidth="200.0" text="Administrator panel" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="50.0" />
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="368.0" layoutY="510.0" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: #83C2D0;" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="350.0">
-         <children>
-            <Button layoutX="50.0" layoutY="50.0" mnemonicParsing="false" onAction="#onClickSupervisorPanel" prefHeight="200.0" prefWidth="150.0" text="Supervisor panel" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="50.0" />
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="900.0" layoutY="460.0" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: #83C2D0;" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="650.0">
-         <children>
-            <Button layoutX="50.0" layoutY="50.0" mnemonicParsing="false" onAction="#onClickCensusEnumeratorPanel" prefHeight="200.0" prefWidth="200.0" text="Census enumerator panel" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="50.0" />
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="950.0" layoutY="510.0" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: #83C2D0;" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="950.0">
-         <children>
-            <Button layoutX="50.0" layoutY="50.0" mnemonicParsing="false" onAction="#onClickTextEditorPanel" prefHeight="200.0" prefWidth="200.0" text="Text editor panel" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="50.0" />
-         </children>
-      </AnchorPane>
-   </children>
+<AnchorPane prefHeight="700.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/8.0.171"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="home_panel.HomeViewController">
+   <ImageView fitHeight="343.0" fitWidth="854.0" layoutX="449.0" layoutY="128.0" pickOnBounds="true"
+              preserveRatio="true" AnchorPane.bottomAnchor="229.0" AnchorPane.leftAnchor="449.0"
+              AnchorPane.rightAnchor="115.0" AnchorPane.topAnchor="128.0">
+      <Image url="@img_home.jpg"/>
+   </ImageView>
+   <Button layoutX="443.0" layoutY="554.0" mnemonicParsing="false" onAction="#onClickLoginBtn" prefHeight="100.0"
+           prefWidth="200.0" text="Login system" AnchorPane.bottomAnchor="89.0" AnchorPane.leftAnchor="443.0"
+           AnchorPane.rightAnchor="607.0" AnchorPane.topAnchor="554.0"/>
+   <AnchorPane prefHeight="700.0" prefWidth="382.0" style="-fx-background-color: #0C39FF;"
+               AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Label layoutX="66.0" layoutY="218.0" prefHeight="27.0" prefWidth="216.0" text="Census Management Tool"
+             textFill="WHITE" AnchorPane.bottomAnchor="455.0" AnchorPane.leftAnchor="66.0"
+             AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="218.0">
+         <font>
+            <Font size="18.0"/>
+         </font>
+      </Label>
+      <Label layoutX="66.0" layoutY="277.0" prefHeight="27.0" prefWidth="251.0" text="Handle enumeration with ease"
+             textFill="WHITE" AnchorPane.bottomAnchor="446.0" AnchorPane.leftAnchor="66.0"
+             AnchorPane.rightAnchor="65.0" AnchorPane.topAnchor="277.0">
+         <font>
+            <Font size="14.0"/>
+         </font>
+      </Label>
+   </AnchorPane>
+   <Button layoutX="935.0" layoutY="554.0" mnemonicParsing="false" onAction="#onClickExitBtn" prefHeight="100.0"
+           prefWidth="200.0" text="Exit system" AnchorPane.bottomAnchor="89.0" AnchorPane.leftAnchor="935.0"
+           AnchorPane.rightAnchor="115.0" AnchorPane.topAnchor="554.0"/>
 </AnchorPane>
