--- a/src/supervisor_panel/supervisor_panel_view.fxml
+++ b/src/supervisor_panel/supervisor_panel_view.fxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -15,94 +15,81 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="supervisor_panel.SupervisorPanelController">
-  <children>
-    <MenuBar VBox.vgrow="NEVER">
-      <menus>
-        <Menu mnemonicParsing="false" text="File">
-          <items>
-            <MenuItem mnemonicParsing="false" text="New" />
-            <MenuItem mnemonicParsing="false" text="Open…" />
-            <Menu mnemonicParsing="false" text="Open Recent" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Close" />
-            <MenuItem mnemonicParsing="false" text="Save" />
-            <MenuItem mnemonicParsing="false" text="Save As…" />
-            <MenuItem mnemonicParsing="false" text="Revert" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Preferences…" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Quit" />
-          </items>
-        </Menu>
-        <Menu mnemonicParsing="false" text="Edit">
-          <items>
-            <MenuItem mnemonicParsing="false" text="Undo" />
-            <MenuItem mnemonicParsing="false" text="Redo" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Cut" />
-            <MenuItem mnemonicParsing="false" text="Copy" />
-            <MenuItem mnemonicParsing="false" text="Paste" />
-            <MenuItem mnemonicParsing="false" text="Delete" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Select All" />
-            <MenuItem mnemonicParsing="false" text="Unselect All" />
-          </items>
-        </Menu>
-        <Menu mnemonicParsing="false" text="Help">
-          <items>
-            <MenuItem mnemonicParsing="false" text="About MyHelloApp" />
-          </items>
-        </Menu>
-      </menus>
-    </MenuBar>
-    <SplitPane dividerPositions="0.2505567928730512, 0.7505567928730512" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
-      <items>
-        <AnchorPane>
-          <children>
-            <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" text="Master" textAlignment="CENTER" wrapText="false">
-              <font>
-                <Font size="18.0" fx:id="x1" />
-              </font>
-              <textFill>
-                <Color blue="0.624" green="0.624" red="0.624" fx:id="x2" />
-              </textFill>
-            </Label>
-          </children>
+<VBox prefHeight="700.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="supervisor_panel.SupervisorPanelController">
+    <AnchorPane prefHeight="80.0" prefWidth="1250.0" style="-fx-background-color: #0C39FF;">
+        <Label layoutX="497.0" layoutY="10.0" text="Supervisor panel" AnchorPane.bottomAnchor="9.0"
+               AnchorPane.leftAnchor="497.0" AnchorPane.rightAnchor="576.0" AnchorPane.topAnchor="10.0">
+            <font>
+                <Font size="24.0"/>
+            </font>
+        </Label>
+    </AnchorPane>
+    <SplitPane dividerPositions="0.2505567928730512, 0.7505567928730512" focusTraversable="true"
+               VBox.vgrow="ALWAYS">
+        <AnchorPane style="-fx-background-color: #d3d3d3;" stylesheets="@../styling/fullpackstyling.css">
+            <Button fx:id="mLocationsBtn" layoutX="90.0" layoutY="177.0" mnemonicParsing="false"
+                    onAction="#onClickNavigate" text="Locations"/>
+            <Button fx:id="mManageEnuBtn" layoutX="51.0" layoutY="264.0" mnemonicParsing="false"
+                    onAction="#onClickNavigate" text="Manage enumerators"/>
+            <Button fx:id="mAccountBtn" layoutX="100.0" layoutY="345.0" mnemonicParsing="false"
+                    onAction="#onClickNavigate" text="Account"/>
+            <Button fx:id="mHomePanelBtn" layoutX="82.0" layoutY="425.0" mnemonicParsing="false"
+                    onAction="#onClickNavigate" text="Home panel"/>
         </AnchorPane>
-        <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
-          <content>
-            <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="430.0">
-              <children>
-                <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="View" textAlignment="CENTER" textFill="$x2" wrapText="false" />
-                        <Label layoutX="167.0" layoutY="172.0" text="Supervisor" />
-              </children>
-            </AnchorPane>
-          </content>
+        <ScrollPane>
+            <content>
+                <AnchorPane id="Content" fx:id="mSupervisorAP" prefHeight="643.0"
+                            prefWidth="594.0">
+                    <children>
+                        <TableView fx:id="locationsViewTBV" layoutX="58.0" layoutY="150.0" prefHeight="436.0"
+                                   prefWidth="480.0" AnchorPane.bottomAnchor="57.0" AnchorPane.leftAnchor="58.0"
+                                   AnchorPane.rightAnchor="56.0" AnchorPane.topAnchor="150.0">
+                            <columns>
+                                <TableColumn fx:id="column1" prefWidth="120.0" text="HouseholdNo"/>
+                                <TableColumn fx:id="column2" prefWidth="75.0" text="location"/>
+                                <TableColumn fx:id="column3" prefWidth="75.0" text="Capacity"/>
+                                <TableColumn fx:id="column4" prefWidth="100.0" text="FirstName"/>
+                                <TableColumn fx:id="column5" prefWidth="100.0" text="LastName"/>
+                            </columns>
+                        </TableView>
+                        <Label layoutX="182.0" layoutY="89.0" text="Enumerated locations" textFill="#0b74f5">
+                            <font>
+                                <Font size="24.0"/>
+                            </font>
+                        </Label>
+                    </children>
+                </AnchorPane>
+            </content>
         </ScrollPane>
         <AnchorPane>
-          <children>
-            <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Details" textAlignment="CENTER" textFill="$x2" wrapText="false" />
-          </children>
+            <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" style="&#10;" text="Details"
+                   textAlignment="CENTER">
+                <font>
+                    <Font size="18.0" fx:id="x1"/>
+                </font>
+                <textFill>
+                    <Color blue="0.624" green="0.624" red="0.624" fx:id="x2"/>
+                </textFill>
+            </Label>
+            <TextArea fx:id="mDetailsTA" layoutX="29.0" layoutY="145.0" prefHeight="400.0" prefWidth="250.0"
+                      AnchorPane.bottomAnchor="75.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="28.0"
+                      AnchorPane.topAnchor="145.0"/>
         </AnchorPane>
-      </items>
     </SplitPane>
     <HBox id="HBox" alignment="CENTER_LEFT" spacing="5.0" VBox.vgrow="NEVER">
-      <children>
-        <Label maxHeight="1.7976931348623157E308" maxWidth="-1.0" text="Left status" HBox.hgrow="ALWAYS">
-          <font>
-            <Font size="11.0" fx:id="x3" />
-          </font>
-          <textFill>
-            <Color blue="0.625" green="0.625" red="0.625" fx:id="x4" />
-          </textFill>
+        <padding>
+            <Insets bottom="3.0" left="3.0" right="3.0" top="3.0"/>
+        </padding>
+        <Label maxHeight="1.7976931348623157E308" text="Left status" HBox.hgrow="ALWAYS">
+            <font>
+                <Font size="11.0" fx:id="x3"/>
+            </font>
+            <textFill>
+                <Color blue="0.625" green="0.625" red="0.625" fx:id="x4"/>
+            </textFill>
         </Label>
-        <Pane prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
-        <Label font="$x3" maxWidth="-1.0" text="Right status" textFill="$x4" HBox.hgrow="NEVER" />
-      </children>
-      <padding>
-        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-      </padding>
+        <Pane HBox.hgrow="ALWAYS"/>
+        <Label font="$x3" text="Right status" textFill="$x4" HBox.hgrow="NEVER"/>
     </HBox>
-  </children>
 </VBox>
